Opened 12 years ago
Closed 12 years ago
#3939 closed defect (fixed)
regression: transport stream is not autodetected
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mpegts regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket3182/
The transport stream from ticket #3182 is not autodetected anymore since 427bcdf0
Related to ticket #3844.
$ ffmpeg -i ntd_gap_sound.ts
ffmpeg version N-66222-g1b5ccae Copyright (c) 2000-2014 the FFmpeg developers
built on Sep 10 2014 09:36:41 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 54. 7.100 / 54. 7.100
libavcodec 56. 1.100 / 56. 1.100
libavformat 56. 4.101 / 56. 4.101
libavdevice 56. 0.100 / 56. 0.100
libavfilter 5. 1.100 / 5. 1.100
libswscale 3. 0.100 / 3. 0.100
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 0.100 / 53. 0.100
[mpeg @ 0x2b69b20] Format mpeg detected only with low score of 25, misdetection possible!
Input #0, mpeg, from 'ntd_gap_sound.ts':
Duration: 00:01:08.25, start: 50432.154678, bitrate: 4008 kb/s
Stream #0:0[0x1c0]: Audio: mp2, 48000 Hz, stereo, s16p, 128 kb/s
At least one output file must be specified
Change History (1)
comment:1 by , 12 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in 296cd9c432775bbf57867fd76e8d2f505a512569