avformat/mpegts: Improve probe heuristic by considering the overall frequency of 0x47 headers

Fixes Ticket3939

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 296cd9c432775bbf57867fd76e8d2f505a512569)